webservice-dispatcher/manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: webservicedispatcher 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webservicedispatcher
  template:
    metadata:
      labels:
        app: webservicedispatcher 
    spec:
      containers:
        - name: webservicedispatcher 
          image: dhtpags.azurecr.io/webservicedispatcher
          ports:
          - containerPort: 8080
      restartPolicy: Always
