webservice-dispatcher/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: webservicedispatcher
spec:
    type: LoadBalancer
    ports:
    - port: 8080 
    selector:
        app: webservicedispatcher
