webservice-dispatcher/manifests/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webservice-dispatcher-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: webservicedispatcher
              servicePort: 8080
            path: /transactions
            pathType: Prefix
